fixed card width on mobile

--- a/assets/scss/pages/ioniconf.scss
+++ b/assets/scss/pages/ioniconf.scss
@@ -375,6 +375,7 @@ flex-grow:1;
     fieldset:nth-of-type(4) {
       flex-basis: auto;
       flex-grow:1;
+      min-width:100%;
     }
   }
 
@@ -982,6 +983,10 @@ flex-grow:1;
 
   #event > .container {
     flex-wrap: wrap;
+  }
+
+  #event .u-spacer {
+    display:none;
   }
 
   #eventInfo {
